@startuml

title __FRAGMENT's Class Diagram__\n

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      class MessagesFragment {
          - chatRoomList : List<ChatRoomItem>
          - chatRoomListRef : DatabaseReference
          - chatListener : ValueEventListener
          + onCreate()
          + onCreateView()
          + onStart()
          + onStop()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      class SearchFragment {
          + onCreateView()
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      class UserBookFragment {
          - cover : Bitmap
          - title : String
          - author : String
          - isbn : String
          - status : String
          - owner : String
          - mListener : OnClickListener
          + onCreateView()
          - extractData()
          - setBookInfo()
          - showError()
          - setStatusBar()
          - setButtons()
          - onStatusChange()
          - onClickUser()
          - onClickButton()
          - onClickTempButton()
      }
    }
  }
  
  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
        class AcceptedFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
        class BorrowedFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
        class ExchangeFragment {
            + onCreateView()
            - setupViewPager()
            + onClick()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
        class RequestedFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  
  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
        class AllTabFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
        class AvailableFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
        class LibraryFragment {
            + onCreateView()
            - setupViewPager()
        }
      }
    }
  }
  

  package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
      package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
        class LoanedFragment {
            - bookListings : List<BookList>
            + onCreateView()
            + onAttach()
            + onResume()
        }
      }
    }
  }
  
  AllTabFragment -up-|> Fragment
  AvailableFragment -up-|> Fragment
  LibraryFragment -up-|> Fragment
  LoanedFragment -up-|> Fragment

  AllTabFragment "1" -- "1" LibraryFragment
  AvailableFragment "1" -- "1" LibraryFragment
  LoanedFragment "1" -- "1" LibraryFragment

  AcceptedFragment -up-|> Fragment
  BorrowedFragment -up-|> Fragment
  ExchangeFragment -up-|> Fragment
  RequestedFragment -up-|> Fragment

  AcceptedFragment "1" -- "1" ExchangeFragment
  RequestedFragment "1" -- "1" ExchangeFragment
  BorrowedFragment "1" -- "1" ExchangeFragment

  MessagesFragment -up-|> Fragment
  SearchFragment -up-|> Fragment
  UserBookFragment -up-|> Fragment


right footer


PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
